added a few things